managed/lab/components/playground/overlays/dev/patches/ingress-playground.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: playground
  namespace: lab
spec:
  tls:
    - hosts:
        - playground.dev.american-broomstick.com
  rules:
  - host: playground.dev.american-broomstick.com
  http:
    paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-nginx-server
            port:
              number: 80
